--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -39,9 +39,10 @@
     top: 0;
     left: 0;
     z-index: 1500;
-    opacity: 0;
     width: 0;
 
+    visibility: hidden;
+    opacity: 0;
     transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
 
@@ -99,6 +100,7 @@
 
   &__checkbox:checked ~ &__nav {
     width: 100%;
+    visibility: visible;
     opacity: 1;
   }
 
